<resources>

    <!-- App Name -->
    <string name="app_name">CZShopper</string>
    
    <!-- Button and Label Strings -->
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
	
	<!-- Title Strings -->
    <string name="title_home_activity">Shopping List</string>
    <string name="title_activity_update_list">Add/Update List</string>
    <string name="add_item_title">Add New Item</string>
    <string name="update_item_title">Update Item</string>

    <!-- Error Strings -->
    <string name="network_error">A network error occured. Please try again later.</string>
    <string name="json_error">An error occurred while processing the list.</string>
    <string name="delete_error">An error occurred while trying to delete the item.</string>
    <string name="file_error">Could not load list from offline store. Pull to force a network refresh.</string>
    <string name="empty_field_error">You cannot leave either field blank.</string>
    
    <!-- Super Secret! Shh, don't tell anyone. -->
    <string name="authToken">quqSxtRqyBowMcz46qKr</string>
    
</resources>